--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,9 +51,20 @@ dev_dependencies:
   freezed: ^2.4.6
   
   flutter_lints: ^3.0.0
+  
+  # App icon generator
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   
   assets:
     - assets/images/
+
+# App icon configuration
+flutter_launcher_icons:
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  macos:
+    generate: true
+    image_path: "assets/images/app_icon.png"
