--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>此应用需要访问照片库以选择卡片图片</string>
+	<key>NSCameraUsageDescription</key>
+	<string>此应用需要访问相机以拍摄卡片图片</string>
 </dict>
 </plist>
