--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -48,31 +48,31 @@ jobs:
       run: flutter config --enable-windows-desktop
       
     - name: 📦 获取项目依赖
-      working-directory: ./app
+      working-directory: app
       run: |
         flutter clean
         flutter pub get
         flutter pub deps
       
     - name: 🔍 代码分析
-      working-directory: ./app
+      working-directory: app
       run: flutter analyze --no-fatal-infos
       continue-on-error: true
       
     - name: 🧪 运行测试
-      working-directory: ./app
+      working-directory: app
       run: flutter test
       continue-on-error: true
       
     - name: 🔨 构建Windows应用
-      working-directory: ./app
+      working-directory: app
       run: |
         $buildType = "${{ github.event.inputs.release_type || 'release' }}"
         Write-Host "构建类型: $buildType"
         flutter build windows --$buildType --verbose
         
     - name: 📊 获取构建信息
-      working-directory: ./app
+      working-directory: app
       run: |
         $exePath = "build\windows\x64\runner\Release\tpcg_collection_record.exe"
         if (Test-Path $exePath) {
@@ -98,7 +98,7 @@ jobs:
       
     - name: 📁 创建发布包
       if: env.BUILD_SUCCESS == 'true'
-      working-directory: ./app
+      working-directory: app
       run: |
         # 创建发布目录
         New-Item -ItemType Directory -Force -Path "release-package"
@@ -128,7 +128,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: tpcg-collection-record-windows-${{ github.run_number }}
-        path: ./app/release-package/
+        path: app/release-package/
         retention-days: 30
         compression-level: 6
         
@@ -138,15 +138,15 @@ jobs:
       with:
         name: build-logs-${{ github.run_number }}
         path: |
-          ./app/build/
-          !./app/build/windows/x64/runner/Release/
+          app/build/
+          !app/build/windows/x64/runner/Release/
         retention-days: 7
         
     - name: 📝 创建Release (仅标签推送)
       if: startsWith(github.ref, 'refs/tags/v') && env.BUILD_SUCCESS == 'true'
       uses: softprops/action-gh-release@v1
       with:
-        files: ./app/release-package/*
+        files: app/release-package/*
         name: TPCG Collection Record ${{ github.ref_name }}
         body: |
           ## 🪟 Windows版本发布
