--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,3 +69,6 @@ flutter_launcher_icons:
   macos:
     generate: true
     image_path: "assets/images/app_icon.png"
+  windows:
+    generate: true
+    image_path: "assets/images/app_icon.png"
