--- a/ios/Podfile
+++ b/ios/Podfile
@@ -53,6 +53,17 @@ post_install do |installer|
       # 修复脚本执行权限
       config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
       
+      # 🔧 修复 dSYM 生成问题
+      config.build_settings['DEBUG_INFORMATION_FORMAT'] = 'dwarf-with-dsym'
+      config.build_settings['STRIP_INSTALLED_PRODUCT'] = 'NO'
+      config.build_settings['COPY_PHASE_STRIP'] = 'NO'
+      
+      # 特别处理 SQLite 相关框架
+      if target.name.downcase.include?('sqlite') || target.name.downcase.include?('fmdb')
+        config.build_settings['GENERATE_DSYM'] = 'YES'
+        config.build_settings['DWARF_DSYM_FOLDER_PATH'] = '$(CONFIGURATION_BUILD_DIR)'
+      end
+      
       # 支持 Apple Silicon Mac 的 arm64 模拟器
       # config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
     end
